--- a/VirtualLab/VirtualLab.csproj
+++ b/VirtualLab/VirtualLab.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Employee.aspx.designer.cs">
       <DependentUpon>Employee.aspx</DependentUpon>
     </Compile>
+    <Compile Include="EmployeeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
